--- a/src-frontend/src/app/admin-dash/admin-dash-mod-user/admin-dash-mod-user.component.html
+++ b/src-frontend/src/app/admin-dash/admin-dash-mod-user/admin-dash-mod-user.component.html
@@ -3,30 +3,43 @@
     <button type="button" class="btn btn-primary" (click)="irAAdminDashUsuarios()">Volver</button>
   </div>
   <h2>Modificar Usuario</h2>
-  <form>
+  <form [formGroup]="userForm" (ngSubmit)="modificarUsuario()">
     <div class="form-group">
       <label for="nombre">Nombre:</label>
-      <input type="text" class="form-control" id="nombre" placeholder="Ingrese el nombre" [(ngModel)]="user.nombre"
-        name="nombre">
+      <input type="text" class="form-control" id="nombre" formControlName="nombre" placeholder="Ingrese el nombre">
+      <div *ngIf="userForm?.get('nombre')?.touched && userForm?.get('nombre')?.invalid" class="text-danger">
+        <div *ngIf="userForm?.get('nombre')?.errors?.['required']">El nombre es requerido.</div>
+        <div *ngIf="userForm?.get('nombre')?.errors?.['pattern']">El nombre no puede contener números ni caracteres especiales</div>
+      </div>
     </div>
     <div class="form-group">
       <label for="apellidos">Apellidos:</label>
-      <input type="text" class="form-control" id="apellidos" placeholder="Ingrese los apellidos"
-        [(ngModel)]="user.apellidos" name="apellidos">
+      <input type="text" class="form-control" id="apellidos" formControlName="apellidos" placeholder="Ingrese los apellidos">
+      <div *ngIf="userForm?.get('apellidos')?.touched && userForm?.get('apellidos')?.invalid" class="text-danger">
+        <div *ngIf="userForm?.get('apellidos')?.errors?.['pattern']">Los apellidos no pueden contener números ni caracteres especiales</div>
+      </div>
     </div>
     <div class="form-group">
       <label for="correo">Correo electrónico:</label>
-      <input type="email" class="form-control" id="correo" placeholder="Ingrese el correo electrónico"
-        [(ngModel)]="user.email" name="email">
+      <input type="email" class="form-control" id="correo" formControlName="email" placeholder="Ingrese el correo electrónico" readonly>
     </div>
     <div class="form-group">
-      <label for="contrasena">Contraseña: <b>(Modificar solo en caso de emergencia para cambiar la
-          contraseña)</b></label>
-      <input type="text" class="form-control" id="contrasena" placeholder="Ingrese la nueva contraseña"
-        [(ngModel)]="user.contrasena" name="contrasena">
+      <label for="contrasena">Contraseña: <b>(Modificar solo en caso de emergencia para cambiar la contraseña)</b></label>
+      <input type="password" class="form-control" id="contrasena" formControlName="contrasena" placeholder="Ingrese la nueva contraseña">
+      <div *ngIf="userForm?.get('contrasena')?.touched && userForm?.get('contrasena')?.invalid" class="text-danger">
+        <div *ngIf="userForm?.get('contrasena')?.errors?.['minlength']">La contraseña debe tener al menos 5 caracteres.</div>
+        <div *ngIf="userForm?.get('contrasena')?.errors?.['pattern']">La contraseña debe tener al menos 4 letras y 1 número.</div>
+      </div>
+    </div>
+    <div class="form-group">
+      <label for="confirmContrasena">Confirmar Contraseña:</label>
+      <input type="password" class="form-control" id="confirmContrasena" formControlName="confirmContrasena" placeholder="Confirme la nueva contraseña">
+      <div *ngIf="userForm.errors?.['mismatch'] && userForm?.get('confirmContrasena')?.touched" class="text-danger">
+        Las contraseñas no coinciden.
+      </div>
     </div>
     <div class="d-flex justify-content-end">
-      <button type="button" class="btn btn-primary me-2" (click)="modificarUsuario()">Guardar Cambios</button>
+      <button type="submit" class="btn btn-primary me-2" [disabled]="userForm.invalid">Guardar Cambios</button>
     </div>
   </form>
 </div>
