--- a/src-frontend/src/app/admin-dash/admin-dash-new-note/admin-dash-new-note.component.html
+++ b/src-frontend/src/app/admin-dash/admin-dash-new-note/admin-dash-new-note.component.html
@@ -1,42 +1,52 @@
 <div class="container mt-5 espaciado">
     <div class="back">
-        <button type="button" class="btn btn-primary" (click)="irAAdminDashNotas()">Volver</button>
+      <button type="button" class="btn btn-primary" (click)="irAAdminDashNotas()">Volver</button>
     </div>
     <h2>Crear Nota</h2>
-    <form>
-        <div class="form-group mb-3">
-            <label for="titulo">Título</label>
-            <input type="text" id="titulo" class="form-control" [(ngModel)]="nota.titulo" name="titulo" required>
+    <form [formGroup]="notaForm" (ngSubmit)="crearNota()">
+      <div class="form-group mb-3">
+        <label for="titulo">Título</label>
+        <input type="text" id="titulo" class="form-control" formControlName="titulo" required>
+        <div *ngIf="notaForm.get('titulo')?.touched && notaForm.get('titulo')?.invalid" class="text-danger">
+          <div *ngIf="notaForm.get('titulo')?.errors?.['required']">El título es requerido.</div>
+          <div *ngIf="notaForm.get('titulo')?.errors?.['blacklisted']">El título contiene palabras prohibidas.</div>
         </div>
-        <div class="form-group mb-3">
-            <label for="contenido">Contenido</label>
-            <textarea id="contenido" class="form-control" [(ngModel)]="nota.contenido" name="contenido" rows="5"
-                required></textarea>
+      </div>
+      <div class="form-group mb-3">
+        <label for="contenido">Contenido</label>
+        <textarea id="contenido" class="form-control" formControlName="contenido" rows="5" required></textarea>
+        <div *ngIf="notaForm.get('contenido')?.touched && notaForm.get('contenido')?.invalid" class="text-danger">
+          <div *ngIf="notaForm.get('contenido')?.errors?.['required']">El contenido es requerido.</div>
+          <div *ngIf="notaForm.get('contenido')?.errors?.['blacklisted']">El contenido contiene palabras prohibidas.</div>
         </div>
-        <div class="form-group mb-3">
-            <label for="autor">Autor</label>
-            <select id="autor" class="form-select" [(ngModel)]="usuario.email" name="autor">
-                <option *ngFor="let usuario of usuarios" [ngValue]="usuario.email">{{ usuario.email }}</option>
-            </select>
+      </div>
+      <div class="form-group mb-3">
+        <label for="email">Autor</label>
+        <select id="email" class="form-select" formControlName="email" required>
+          <option *ngFor="let usuario of usuarios" [ngValue]="usuario.email">{{ usuario.email }}</option>
+        </select>
+        <div *ngIf="notaForm.get('email')?.touched && notaForm.get('email')?.invalid" class="text-danger">
+          <div *ngIf="notaForm.get('email')?.errors?.['required']">El autor es requerido.</div>
         </div>
-        <div class="d-flex justify-content-end">
-            <button type="submit" class="btn btn-primary me-2" (click)="crearNota()">Nueva Nota</button>
-        </div>
+      </div>
+      <div class="d-flex justify-content-end">
+        <button type="submit" class="btn btn-primary me-2" [disabled]="notaForm.invalid">Nueva Nota</button>
+      </div>
     </form>
-</div>
-
-<div id="myModal1" class="modal" [ngClass]="{'show': isModalCerrar}">
-  <div class="modal-content">
-    <span class="close" (click)="closeModalCerrar(); irAAdminDashNotas()">&times;</span>
-    <div class="check-animation">
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 52 52">
-        <circle cx="26" cy="26" r="25" fill="none" />
-        <path fill="none" stroke="#ffffff" stroke-width="5" stroke-linecap="round" stroke-linejoin="round"
-          d="M14 27l5 5 14-14" class="check-svg" />
-      </svg>
-    </div>
-    <p>Se ha realizado la acción satisfactorimente</p>
-    <button class="btnCerrar" (click)="closeModalCerrar(); irAAdminDashNotas()">Cerrar</button>
   </div>
-</div>
-
+  
+  <div id="myModal1" class="modal" [ngClass]="{'show': isModalCerrar}">
+    <div class="modal-content">
+      <span class="close" (click)="closeModalCerrar(); irAAdminDashNotas()">&times;</span>
+      <div class="check-animation">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 52 52">
+          <circle cx="26" cy="26" r="25" fill="none" />
+          <path fill="none" stroke="#ffffff" stroke-width="5" stroke-linecap="round" stroke-linejoin="round"
+            d="M14 27l5 5 14-14" class="check-svg" />
+        </svg>
+      </div>
+      <p>Se ha realizado la acción satisfactoriamente</p>
+      <button class="btnCerrar" (click)="closeModalCerrar(); irAAdminDashNotas()">Cerrar</button>
+    </div>
+  </div>
+  
